tests/NormalTests/paczka1/fuzzy1/14214804.err
Error in line 1: EsG A817 42,0
Error in line 17: EsG A837 33,1
Error in line 20: EsG A320 85,2
Error in line 30: EsG A817 17,8
Error in line 27: lMPqDeF4Ct A817 61,0
Error in line 33: EsG A360 92,9
